src/objects/MICO_App__c.object
<CustomObject>
    <description>Business Description: This object is used to store a list of applications, capturing their name, use, technical and business contacts as well as physical location.
Used In: Mission Control App

Created on 04/29/2014 by SMills
MICO</description>
    <fields>
        <fullName>Access_Approver_Group__c</fullName>
        <inlineHelpText>Default ServiceNow assignment group for approving access requests to the application.</inlineHelpText>
        <label>Access Approver Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Code__c</fullName>
        <description>The 4 letter application code used to namespace this application
Created on 04/29/2014 by SMills
MICO</description>
        <externalId>true</externalId>
        <inlineHelpText>The 4 letter application code used to namespace this application</inlineHelpText>
        <label>App Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>App_Logo__c</fullName>
        <inlineHelpText>Stores the URL of the App Logo</inlineHelpText>
        <label>App Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first point of contact about this application from a business perspective
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The first point of contact about this application from a business perspective</inlineHelpText>
        <label>Business Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <label>Primary Originating Business Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Animal Health R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Bio-Medicines Business Unit</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Business Operations</fullName>
                </value>
                <value>
                    <fullName>Clinical Ops</fullName>
                </value>
                <value>
                    <fullName>Corp Affairs</fullName>
                </value>
                <value>
                    <fullName>Corp Leadership</fullName>
                </value>
                <value>
                    <fullName>Corporate Business Development</fullName>
                </value>
                <value>
                    <fullName>Diabetes Business Unit</fullName>
                </value>
                <value>
                    <fullName>Elanco</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets Business Unit</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global Ethics &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>LRL</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medicines Development Unit</fullName>
                </value>
                <value>
                    <fullName>Mktg- Animal Health</fullName>
                </value>
                <value>
                    <fullName>Mktg-Pharma</fullName>
                </value>
                <value>
                    <fullName>Oncology Business Unit</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user responsible for this application from a Business Quality perspective
Created on 06/26/2014 by SMills 
MICO</description>
        <inlineHelpText>The user responsible for this application from a Business Quality perspective</inlineHelpText>
        <label>Business Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMDB_ID__c</fullName>
        <description>External reference to the Configuration Managment Database application
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>Configuration Management Database ID</inlineHelpText>
        <label>CMDB ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user responsible for this application from a Computer Systems Quality perspective
Created on 06/26/2014 by SMills 
MICO</description>
        <inlineHelpText>The user responsible for this application from a Computer Systems Quality perspective</inlineHelpText>
        <label>Computer Systems Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICOApps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Primary Originating Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Zone__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Trinidad and Tobago</fullName>
                </value>
                <value>
                    <fullName>Venezuela</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Criticality__c</fullName>
        <description>The data criticality for the application using the Lilly colour based framework
Created on 06/26/2014 by SMills 
MICO</description>
        <inlineHelpText>The criticality of the data captured / used by this application.</inlineHelpText>
        <label>Data Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assessed</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>A detailed description of the application
Created on 04/29/2014 by SMills 
MICO</description>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GxP__c</fullName>
        <description>GxP Quality Assessment
Created on 06/26/2014 by SMills 
MICO</description>
        <label>GxP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assessed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Responsible_Org__c</fullName>
        <description>The IT organisation responsible for this app
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The IT organisation responsibe for this application</inlineHelpText>
        <label>IT Responsible Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICO_Org_Instance__c</fullName>
        <inlineHelpText>Indicate the GSO org that the application  is hosted on.</inlineHelpText>
        <label>Force.com Org Instance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>GSO1</fullName>
                </value>
                <value>
                    <fullName>GSO2</fullName>
                </value>
                <value>
                    <fullName>GSO3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICO_Platforms_and_Services__c</fullName>
        <inlineHelpText>Select all applicable platforms or services, if any, that the application uses.  For example, if an application is built on Force.com and does not utilize Contentful services, only Force.com should be selected</inlineHelpText>
        <label>Platforms and Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Force.com</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Contentful</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICO_Validated__c</fullName>
        <inlineHelpText>Indicate whether or not the application is validated.</inlineHelpText>
        <label>Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Assessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICO_Version__c</fullName>
        <inlineHelpText>Indicate the current version number of the application.</inlineHelpText>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Status__c</fullName>
        <description>The stage of the PIC assessment associated with this application
Created on 06/26/2014 by SMills 
MICO</description>
        <label>PIC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIC_URL__c</fullName>
        <description>The URL for the completed PIC record
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The URL for the completed PIC record</inlineHelpText>
        <label>PIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Support_Group__c</fullName>
        <inlineHelpText>Default ServiceNow assignment group for resolving incidents, problems, etc. related to the application configuration item within ServiceNow.</inlineHelpText>
        <label>Primary Support Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Critical__c</fullName>
        <description>Stores if this application is quality critical
Created on 06/26/2014 by SMills 
MICO</description>
        <inlineHelpText>Is this application Quality Critical</inlineHelpText>
        <label>Quality Critical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assessed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Retention_Schedule__c</fullName>
        <description>This field serves as &quot;Record Retention Schedule&quot; information for an app record.</description>
        <inlineHelpText>Enter the &quot;Record Retention Schedule&quot; info. for this app here.</inlineHelpText>
        <label>Record Retention Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Notes__c</fullName>
        <description>This field is used to capture quality and criticality assessment notes: Created on 05/08/2014 by Preeti Grover:MICO</description>
        <label>Quality &amp; Criticality Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <description>This field is used to capture the risk category associated with the application: Created on 05/8/2014 by Preeti Grover:MICO</description>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Code_Repository_Name__c</fullName>
        <label>Source Code Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stage in application development lifecycle
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>Indicates the lifecycle status of an application</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>High level summary of the app, including users, key functionality etc.
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>High level summary of the app, including users, key functionality etc.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Go_Live_Date__c</fullName>
        <inlineHelpText>The date upon which support for the application transitions from Hypercare to GSO Care.</inlineHelpText>
        <label>Support Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Plan__c</fullName>
        <inlineHelpText>Support Plan specifically refers to the group that provides enhancements and defect resolution for the respective app.</inlineHelpText>
        <label>Support Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Hypercare</fullName>
                </value>
                <value>
                    <fullName>GSO Care</fullName>
                </value>
                <value>
                    <fullName>Vendor Supported</fullName>
                </value>
                <value>
                    <fullName>Citizen Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Custodian_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Custodian Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>App_System_Custodian_Backup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A point of contact about this application from a technical perspective
Created on 06/26/2014 by SMills 
MICO</description>
        <inlineHelpText>The system custodian for this application</inlineHelpText>
        <label>System Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A first point of contact about this application
Created on 06/25/2014 by SMills 
MICO</description>
        <inlineHelpText>The System Owner responsible for this application</inlineHelpText>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first point of contact about this application from a technical perspective
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The first point of contact about this application from a technical perspective</inlineHelpText>
        <label>Technical Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Primary Originating Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone-1-LA</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>